<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#19000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/layout_tab_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgview_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_tab_home_normal" />

            <TextView
                android:id="@+id/text_tab_home"
                style="@style/TabTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_lebel_main_home"
                android:textColor="@color/tab_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_tab_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgview_tab_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_tab_card_normal" />

            <TextView
                android:id="@+id/text_tab_card"
                style="@style/TabTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_lebel_main_card"
                android:textColor="@color/tab_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_tab_trans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgview_tab_trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_tab_card_normal" />

            <TextView
                android:id="@+id/text_tab_trans"
                style="@style/TabTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_lebel_main_trans"
                android:textColor="@color/tab_normal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>