<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/img_bank_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@null"
                android:src="@drawable/logo_cmbc" />

            <TextView
                android:id="@+id/text_bank_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:text="招商银行 信用卡 尾号8888"
                android:textColor="@color/text_black"
                android:textSize="@dimen/fontsize_normal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/CardInputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:paddingLeft="20dp"
                android:text="请输入卡信息"
                android:textSize="@dimen/fontsize_normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#19000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_bg"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <!-- 有效期 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_input_item"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/CardInputTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="有效期" />

                    <EditText
                        android:id="@+id/edit_bank_validity"
                        style="@style/CardInputTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_valid_date"
                        android:inputType="number"
                        android:maxLength="4" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#19000000" />

                <!-- 安全码 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_input_item"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/CardInputTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="安全码" />

                    <EditText
                        android:id="@+id/edit_bank_safecode"
                        style="@style/CardInputTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_safe_code"
                        android:inputType="number"
                        android:maxLength="3" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#19000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#19000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_bg"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <!-- 手机号 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_input_item"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/CardInputTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="手机号" />

                    <EditText
                        android:id="@+id/edit_bank_phonenum"
                        style="@style/CardInputTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_phonenumber"
                        android:inputType="number"
                        android:maxLength="11" />

                    <Button
                        android:id="@+id/btn_get_verifycode"
                        style="@style/AppButtonStyle"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:text="@string/label_get_verify_code"
                        android:textSize="@dimen/fontsize_smaller" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#19000000" />

                <!-- 验证码 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_input_item"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/CardInputTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="验证码" />

                    <EditText
                        android:id="@+id/edit_bank_verifycode"
                        style="@style/CardInputTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_verify_code"
                        android:inputType="number"
                        android:maxLength="6" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#19000000" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_card_info_next"
        style="@style/AppButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="下一步" />

</RelativeLayout>